# evaluation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: code_quality.yml  test.yml
docs/: datasets.md
evaluation/: __init__.py  eval.py  train.py
evaluation/datasets/: lambada.py  tydiqa.py  wmt.py
evaluation/models/: __init__.py  loader.py
evaluation/scripts/: simple_benchmark.py  wmt.py
evaluation/tasks/: __init__.py  auto_task.py
evaluation/tasks/anli/: anli.py
evaluation/tasks/blimp/: blimp.py  task_names.py
evaluation/tasks/crowspairs/: crowspairs.py
evaluation/tasks/hans/: hans.py
evaluation/tasks/jigsaw_toxicity_pred/: jigsaw_toxicity_pred.py
evaluation/tasks/lama_trex/: english.json  lama_trex.py
evaluation/tasks/lambada/: lambada.py
evaluation/tasks/piaf/: english.json  multilingual.json  piaf.py
evaluation/tasks/piqa/: piqa.py
evaluation/tasks/template/: template.py
evaluation/tasks/tydiqa_primary/: tydiqa_primary.py
evaluation/tasks/tydiqa_secondary/: tydiqa_secondary.py
evaluation/tasks/webnlg/: webnlg.py
evaluation/tasks/wmt/: english.json  wmt.py
evaluation/tasks/xquad/: multilingual.json  xquad.py
evaluation/utils/: io.py  log.py
evaluation/webnlg/: english.json
social-impact-group/: README.md  arabic_sentences.csv  create_bias_eval.ipynb  french_sentences.csv  french_vocabulary.csv
social-impact-group/BiasShades/: example_bias_shades_prompt_generation_code.py  shades_input
social-impact-group/resources/: dela-fr-public.dic
tests/: test_tydiqa_secondary.py
(+7 files in other folders)
