[tool.black]
line-length = 119
target-version = ['py38']

[tool.pytest.ini_options]
filterwarnings = ["ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:tensorflow.*"]

[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.11"
datasets = "1.11.0"
Jinja2 = "3.0.1"
tensorflow = "2.5.0"
torch = "1.9.0"
tqdm = "4.62.0"
transformers = "4.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"
